fix: resolve compilation errors and checkstyle violations
- fix line length violations in PanamaErrorHandler method signatures
- resolve 244 checkstyle violations in wasmtime4j-tests module using spotless auto-format
- fix abbreviation naming violations (BATCH_SIZE/BATCH_COUNT to itemsPerBatch/batchCountMax)
- enable JNI and Panama modules in parent pom.xml build configuration
- update JUnit version to 5.10.4 for consistency
- clean up various formatting and import organization issues across modules

All modules now compile successfully with mvn compile.